2002-01-08  Alex Graveley  <alex@ximian.com>

	* TODO: Update

	* acconfig.h: undef SSL_PROXY_NAME

	* src/libsoup/soup-ssl.c (soup_ssl_get_iochannel): Execute
	customly chosen SSL proxy name.

	* src/soup-ssl-proxy/Makefile.am (install-exec-hook): Add
	install-time hook for customly named SSL proxy.

	* configure.in: Don't let -lpopt sneak into $LIBS. Add option to
	allow custom name for the openssl proxy.  Add option to allow
	static linking of the SSL library.

2002-01-02  Rodrigo Moya <rodrigo@ximian.com>

	* src/libsoup-apache/soup-apache.c (soup_apache_handler): updated
	for the new field names in SoupServerAuthBasic

2001-12-21  Alex Graveley  <alex@ximian.com>

	* src/libsoup/Makefile.am (libsoup_la_SOURCES): Add
	soup-server-auth.c.

	* src/libsoup/soup-server-auth.c: Implement server-side
	basic/digest authentication.
	(soup_server_auth_get_user): Impl. Allows server auth/path handler
	to get the username.
	(soup_server_auth_check_passwd): Impl. Allows server auth/path
	handler to check a password against the one used in the request.

	* src/libsoup/soup-server.c (call_handler): Create SoupServerAuth
	and call auth context's callback before calling path handler.
	(message_new): Don't create temporary context, just pass NULL.
	(soup_server_register): Copy auth context correctly.
	(soup_server_message_new): If a server message already exists,
	return that.
	(soup_server_message_finish): Start server message as well as
	finish, in case message_start is never called.

	* src/libsoup/soup-private.h: Include sys/types.h so sockaddr
	works for FreeBSD.

	* src/libsoup/soup-misc.c: Move base64 encoding/decoding here from
	soup-ntlm.c.  Remove copyright notice as soup_base64_encode is now
	taken from evolution.
	(soup_base64_encode): Use soup_base64_encode_close.
	(soup_base64_decode): Impl. Use soup_base64_decode_step.

	* src/libsoup/soup-misc.h: Make base64 code public.

	* src/libsoup/soup-ntlm.c: Use base64 code from soup-misc.c.
